Fix swiper bug on mobile screent

--- a/frontend/src/app/top-hotels/top-hotels.component.css
+++ b/frontend/src/app/top-hotels/top-hotels.component.css
@@ -3,3 +3,7 @@
   height: 250px;
   object-fit: cover;
 }
+
+.swiper-slide {
+  min-width: 250px;
+}
